<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheBeerCode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="Connection">Connection</string>
    <string name="Inscription">Inscription</string>
    <string name="Beers">Beers</string>
    <string name="Additions">My Additions</string>
    <string name="MyVotes">My Votes</string>
    <string name="Disconnection">Disconnection</string>
    <string name="Welcome">Welcome, </string>
    <string name="NameHere">Name Here</string>
    <string name="Profile">My Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="Login">Login :</string>
    <string name="Password">Password :</string>
    <string name="SignIn">Sign in</string>
    <string name="Cancel">Cancel</string>
    <string name="NotRegistered">Not Registered Yet ?</string>
    <string name="ConfPassword">Confirm password :</string>
    <string name="Mail">Mail :</string>
    <string name="Country">Country :</string>
    <string name="ConfSignUp">Join now !</string>
    <string name="title_activity_mes_ajouts">My Additions</string>
    <string name="Back">Back</string>
    <string name="title_activity_ajout_biere">AjoutBiere</string>
    <string name="BeerName">Beer name :</string>
    <string name="BeerPicture">Beer picture :</string>
    <string name="ABV">Alcohol by volume :</string>
    <string name="Add">Add</string>
    <string name="title_activity_mon_profil">MonProfil</string>
    <string name="title_activity_mes_votes">MesVotes</string>
    <string name="title_activity_recherche_biere">RechercheBiere</string>
    <string name="Picture">Choose image</string>
    <string name="DegreSup">Alcohol By Volume &gt; to</string>
    <string name="DegreInf">Alcohol By Volume &lt; to</string>
    <string name="Name">Name</string>
    <string name="NoteSup">Note &gt; to</string>
    <string name="NoteInf">Note &lt; to</string>
    <string name="Research">Research</string>
    <string name="Reset">Reset</string>
    <string name="Filtre">Filtre</string>
    <string name="Commentary">Commentary</string>
    <string name="title_activity_mes_favoris">MesFavoris</string>
    <string name="MyFavorites">My Favorites</string>
    <string name="title_activity_affichage_biere">AffichageBiere</string>
    <string name="Rating">Rating :</string>
    <string name="NbVotes">Number of votes :</string>
    <string name="btRating">Rate</string>
    <string name="Localization">Localization</string>
    <string name="Beer">Beer</string>
    <string name="SearchBeer">Search Beer</string>
    <string name="AddBeer">Add Beer</string>
    <string name="User">User</string>
    <string name="Comment">Comment :</string>
    <string name="Note">Evaluation :</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="Edit">Edit</string>
    <string name="title_activity_modifier_biere">ModifierBiere</string>
    <string name="btLocalize">Localize here</string>
    <string name="PlaceName">Place name :</string>
    <string name="Price">Beer Price :</string>
    <string name="title_activity_localization">LocalizationActivity</string>
    <string name="GetPositions">Getting localizations...</string>
    <string name="GPSdisabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="GPSdisabled2">GPS disabled, unable to localize. Last known position used.</string>
    <string name="addFav">You need to be authenticated to add a beer to your favorites!</string>
    <string name="noteBeer">You need to be authenticated to note a beer!</string>
    <string name="localize">Localize</string>
    <string name="whatDo">What do you want to do?</string>
    <string name="localizeHere">Localize Here</string>
    <string name="displayLoc">Display locations</string>
    <string name="Delete">Delete</string>
    <string name="DeleteBeer">Do you really want to delete this beer ? Everything will be lost.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="DownData">Donwloading data...</string>
    <string name="AddedToFav">Added to favorites!</string>
    <string name="DelFromFav">Deleted from favorites</string>
    <string name="BeerDeleted">Beer deleted!</string>
    <string name="VoteSaved">Vote  saved!</string>
    <string name="rating">Rating</string>
    <string name="FromCam">From camera</string>
    <string name="FromCard">From SD card</string>
    <string name="SelectImage">Select image</string>
    <string name="CompleteUsing">Complete action using</string>
    <string name="SavingBeer">Saving beer...</string>
    <string name="BeerAdded">Beer added!</string>
    <string name="GPSdisabled3">GPS disabled, unable to use your location</string>
    <string name="LocAdded">Localization added!</string>
    <string name="NeedCo">You have to be connected!</string>
    <string name="DiscSuccess">Disconnected with success</string>
    <string name="Connected">Connected</string>
    <string name="ConnFailed">Connection failed</string>
    <string name="ConnCanceled">Connection canceled</string>
    <string name="SignUpSuccess">Sign up successful</string>
    <string name="SignUpCanceled">Sign up canceled</string>
    <string name="ProfileMod">Profile Modified</string>
    <string name="connection">Connecting to the server...</string>
    <string name="ConnecSuccess">Connection successful</string>
    <string name="UpdatingBeer">Updating beer...</string>
    <string name="BeerUpdated">Beer updated</string>
    <string name="NetworkDisabled">Your network connection seems to be disabled, would you like you enable it?</string>
    <string name="NetworkDisabled2">The application cannot run without internet connection</string>

</resources>
