<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tVWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome" />
        
        <TextView
            android:id="@+id/tVNameMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NameHere" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/bBeers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Beers" />
    
    <Button
        android:id="@+id/bAdditions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Additions" />
    
    <Button
        android:id="@+id/bMyVotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyVotes" />
    
    <Button
        android:id="@+id/bMyFavorites"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyFavorites" />

    <Button
        android:id="@+id/bProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Profile" />
    
    <Button
        android:id="@+id/bDisconnection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Disconnection" />
    
</LinearLayout>
