<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login" >

    <TextView
        android:id="@+id/tVLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login" />

    <EditText
        android:id="@+id/eTLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/tVPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/eTPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignIn" />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tVNotRegistered"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/NotRegistered"
        android:textStyle="bold" />
    
</LinearLayout>
