<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/bConnection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Connection" />

    <Button
        android:id="@+id/bInscription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Inscription" />
    
    <Button
        android:id="@+id/bSearchBeer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchBeer" />
    
</LinearLayout>
