<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvNoter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note" />

    <RatingBar
        android:id="@+id/rbBeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCommenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Comment" />

    <EditText
        android:id="@+id/etCommentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"       android:orientation="horizontal" >

        <Button
            android:id="@+id/bConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm" />

		<Button
            android:id="@+id/bCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel" />
    </LinearLayout>

</LinearLayout>
