<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="19dp"
        android:text="@string/PlaceName" />

    <EditText
        android:id="@+id/etPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPlaceName"
        android:layout_below="@+id/tvPlaceName"
        android:ems="10" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPlaceName"
        android:layout_below="@+id/etPlaceName"
        android:text="@string/Price" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPrice"
        android:layout_below="@+id/tvPrice"
        android:ems="5"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btLocalize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPrice"
        android:layout_below="@+id/etPrice"
        android:layout_marginLeft="21dp"
        android:text="@string/btLocalize" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPrice"
        android:layout_toRightOf="@+id/btLocalize"
        android:text="@string/Cancel" />

</RelativeLayout>
