<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inscription" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:width="100sp" />

        <EditText
            android:id="@+id/edlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >
		</EditText>
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password" 
            android:width="100sp"/>

        <EditText
            android:id="@+id/edpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" >
		</EditText>
	</LinearLayout>
	 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbconfPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ConfPassword" 
            android:width="100sp"/>

        <EditText
            android:id="@+id/edconfPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" >
		</EditText>
	 </LinearLayout>
	 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mail" 
            android:width="100sp"/>

        <EditText
            android:id="@+id/edmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" >
		</EditText>
	   </LinearLayout>
	   
     
     
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbpays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Country"
            android:width="100sp" />

        <EditText
            android:id="@+id/edpays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >
		</EditText>
	   </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal" >

        <Button
           android:id="@+id/validerInscription"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1" 
           android:text="@string/ConfSignUp" />
       
        <Button
           android:id="@+id/annulerInscription"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1" 
           android:text="@string/Cancel" />
	   </LinearLayout>
	   
 </LinearLayout>